--- a/index.html
+++ b/index.html
@@ -4,88 +4,115 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aamna Shahab | Portfolio</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css"> <!-- Link to the CSS file -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Aamna Shahab</h1>
-            <nav>
-                <a href="#hero">Home</a>
-                <a href="#technical-skills">Skills</a>
-                <a href="#projects">Projects</a>
-                <a href="#contact">Contact</a>
-            </nav>
-        </div>
+        <h1>Aamna Shahab</h1>
+        <p>Email: <a href="mailto:aamna.ger@gmail.com">aamna.ger@gmail.com</a> | LinkedIn: <a href="https://linkedin.com/in/aamna-shahab-146509135">linkedin.com/in/aamna-shahab-146509135</a></p>
+        <p>Applying for: Full Stack Developer | Open to: Germany (on-site), Remote, Full-Time, Part-Time, Internship</p>
     </header>
-
-    <section id="hero">
-        <div class="hero-content">
-            <h2>Welcome to My Portfolio</h2>
-            <p>I'm Aamna Shahab, a Test Analyst and aspiring software developer passionate about creating innovative solutions and impactful projects.</p>
-            <a href="#projects" class="btn-primary">Explore My Work</a>
-        </div>
-    </section>
-
-    <section id="technical-projects">
-        <div id="technical-skills">
-            <h2>Technical Skills</h2>
-            <div class="skill-category">
-                <h3>Programming Languages</h3>
-                <div class="skill-item">HTML5 <span class="level">90%</span></div>
-                <div class="skill-item">CSS3 <span class="level">85%</span></div>
-                <div class="skill-item">JavaScript <span class="level">80%</span></div>
-                <div class="skill-item">XML <span class="level">75%</span></div>
-            </div>
-            <div class="skill-category">
-                <h3>Frameworks & Libraries</h3>
-                <div class="skill-item">ReactJS <span class="level">85%</span></div>
-                <div class="skill-item">AngularJS <span class="level">70%</span></div>
-            </div>
-        </div>
-
-        <div id="projects">
-            <h2>Projects</h2>
-            <div class="project-card">
-                <h3>E-Commerce Websites</h3>
-                <p>Developed <a href="https://amyandely.com" target="_blank">Amy & Ely</a> and <a href="https://14fox.com" target="_blank">14Fox</a>, focusing on user-friendly design and online sales optimization.</p>
-            </div>
-            <div class="project-card">
-                <h3>Weather App</h3>
-                <p>Built a real-time weather application using ReactJS with data integration from weather APIs.</p>
-            </div>
-        </div>
-    </section>
-
-    <section id="contact">
-        <h2>Let's Talk</h2>
-        <form id="contact-form" action="https://formsubmit.co/aamna.shahab10@gmail.com" method="POST">
-            <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" placeholder="Your Name" required>
-            </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" placeholder="Your Email" required>
-            </div>
-            <div class="form-group">
-                <label for="message">Message</label>
-                <textarea id="message" name="message" rows="5" placeholder="Write your message here..." required></textarea>
-            </div>
-            <button type="submit" class="btn-primary">Send Message</button>
-        </form>
-    </section>
     
-
+    <section id="summary">
+        <h2>Professional Summary</h2>
+        <p>Results-driven Software Engineer with expertise in C++, ReactJS, and automated testing tools like WebDriverIO. Proven ability to deliver high-quality software solutions, streamline development processes, and improve test coverage, resulting in measurable increases in efficiency. Adept at building dynamic web applications, utilizing data structures, and collaborating with cross-functional teams to achieve project goals. Seeking opportunities in software development, front-end engineering, or automation testing roles.</p>
+    </section>
+    <section id="skills">
+        <h2>Technical Skills</h2>
+        <ul>
+            <li>Programming Languages: C++, Python, JavaScript (ES6+), TypeScript, HTML5, CSS3 (SASS, LESS)</li>
+            <li>Frameworks/Libraries: React, Bootstrap, Flutter</li>
+            <li>Tools: Git, WebDriverIO, Playwright, JIRA, Xray, Adobe Photoshop, Illustrator</li>
+            <li>Databases: MySQL, Firebase</li>
+            <li>Cloud Services: Amazon AWS</li>
+            <li>Testing: Automated Testing (WebDriverIO, Playwright), Manual Testing, Performance Testing</li>
+        </ul>
+    </section>
+    <section id="education">
+        <h2>Education</h2>
+        <ul>
+            <li>Master’s in Computer Science, Saarland University, Saarland, Germany (2021 – Present; Currently on pause for work experience)</li>
+            <li>Bachelor’s in Computer Applications (B.C.A.), Amity University, Noida, India (2017 – 2020) - Graduated among the top 5 in a cohort of 250 students</li>
+        </ul>
+    </section>
+    <section id="experience">
+        <h2>Professional Experience</h2>
+        <h3>Test Analyst (Working-Student)</h3>
+        <p>Plan Software GmbH, Saarbrücken, Germany (2022 – Present)</p>
+        <ul>
+            <li>Automated 50+ test cases with WebDriverIO, increasing test coverage by 25%.</li>
+            <li>Reviewed system designs for testability, enhancing functionality and reducing debugging time.</li>
+            <li>Used JIRA and Xray to manage projects and track issues, ensuring timely resolutions.</li>
+            <li>Collaborated with developers to identify bugs, reducing post-release defects by 15%.</li>
+        </ul>
+        <h3>WordPress Developer (Full-Time)</h3>
+        <p>RTL Language Solutions Pvt. Ltd., New Delhi, India (2019 – 2021)</p>
+        <ul>
+            <li>Built and maintained WordPress sites, improving user engagement and search rankings.</li>
+            <li>Implemented custom plugins, reducing development time by 20%.</li>
+            <li>Conducted site audits, ensuring 99% uptime and optimal performance.</li>
+        </ul>
+        <h3>Web and Android App Developer (Part-Time)</h3>
+        <p>Lighthusky Technologies Pvt. Ltd., Uttar Pradesh, India (2018 – 2019)</p>
+        <ul>
+            <li>Developed cross-browser-compatible web apps using JavaScript, ensuring consistent user experiences.</li>
+            <li>Created Android apps using Kotlin, integrating APIs to enhance functionality.</li>
+            <li>Improved app load times by 30% through optimization techniques.</li>
+        </ul>
+        <h3>Founder & Business Manager</h3>
+        <p>Business, India (2019 – 2021)</p>
+        <ul>
+            <li>Launched and managed a successful stationery product line, overseeing inventory, sales, and vendor relationships.</li>
+            <li>Built and maintained the e-commerce website 14fox.com, showcasing product collections and ensuring seamless user navigation.</li>
+            <li>Led a team of 5, delegating tasks effectively and achieving a 20% year-over-year revenue increase.</li>
+        </ul>
+    </section>
+    <section id="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li>Fashion E-Commerce Website: Developed and managed www.amyandely.com and www.14fox.com, incorporating WooCommerce for optimized online shopping experiences.</li>
+            <li>Hotel Website with Channel Integration: Built www.alexandrossbnb.com and integrated booking synchronization via Lodgify.</li>
+            <li>Translation Services Platform: Created www.rtllanguagesolutions.com using WordPress, improving client acquisition by 15%.</li>
+            <li>Native Weather Application: Developed using ReactJS, featuring real-time weather updates and an intuitive UI.</li>
+            <li>Food Delivery App: Designed an Android app for food delivery, streamlining order placement and tracking.</li>
+            <li>Fashion E-Commerce Website (Staging): Designed and developed the website www.staging.uchobali.com, focusing on responsive design and user-centric navigation for a seamless online shopping experience.</li>
+        </ul>
+    </section>
+    <section id="certifications">
+        <h2>Certifications</h2>
+        <ul>
+            <li>“Deutsch als Fremdsprache” - Niveau A1.1, Saarland University (July 2022)</li>
+            <li>Digital Marketing, Accenture (March 2020)</li>
+            <li>Best in Technical Innovation, Amity University (2020)</li>
+        </ul>
+    </section>
+    <section id="patents">
+        <h2>Patents</h2>
+        <ul>
+            <li>A Wall Display Device with Smartphone Connectivity - Patent No: IN 20211002120 • Filed Jan 16, 2021</li>
+            <li>Solar Powered Charger for Wireless Charging - Patent No: IN 201911001867 • Filed Jan 16, 2019</li>
+        </ul>
+    </section>
+    <section id="soft-skills">
+        <h2>Soft Skills</h2>
+        <ul>
+            <li>Leadership</li>
+            <li>Time Management</li>
+            <li>Communication</li>
+            <li>Creative Problem-Solving</li>
+            <li>Logical Thinking</li>
+            <li>Teamwork</li>
+            <li>Analytical Thinking</li>
+        </ul>
+    </section>
     <footer>
-        <p>&copy; 2024 Aamna Shahab | All Rights Reserved</p>
+        <p>&copy; 2024 Aamna Shahab. All rights reserved.</p>
     </footer>
-
     <button id="theme-toggle">Toggle Dark Mode</button>
     <script src="theme-toggle.js"></script>
 </body>
