trying to add a fun cartoon vibe for portoflio

--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
 
 </head>
 <body>
-    <header>
+    <section id="hero">
         <h1>Aamna Shahab</h1>
-        <p>Email: <a href="mailto:aamna.ger@gmail.com">aamna.ger@gmail.com</a> | LinkedIn: <a href="https://linkedin.com/in/aamna-shahab-146509135">linkedin.com/in/aamna-shahab-146509135</a></p>
-        <p>Applying for: Full Stack Developer | Open to: Germany (on-site), Remote, Full-Time, Part-Time, Internship</p>
-    </header>
-    
+        <h2>Creative Developer & Tester</h2>
+        <p>Email: <a href="mailto:aamna.ger@gmail.com">aamna.ger@gmail.com</a></p>
+    </section>
+    <div class="bubble" id="projects">Projects</div>
+    <div class="bubble" id="skills">Skills</div>
+    <div class="bubble" id="contact">Contact</div>
+
+
     <section id="summary">
         <h2>Professional Summary</h2>
         <p>Results-driven Software Engineer with expertise in C++, ReactJS, and automated testing tools like WebDriverIO. Proven ability to deliver high-quality software solutions, streamline development processes, and improve test coverage, resulting in measurable increases in efficiency. Adept at building dynamic web applications, utilizing data structures, and collaborating with cross-functional teams to achieve project goals. Seeking opportunities in software development, front-end engineering, or automation testing roles.</p>
@@ -114,6 +118,8 @@
         <p>&copy; 2024 Aamna Shahab. All rights reserved.</p>
     </footer>
     <button id="theme-toggle">Toggle Dark Mode</button>
+    <script src="bubbles.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="theme-toggle.js"></script>
 </body>
 </html>
