updating font family and size (rock salt)

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Aamna Shahab | Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
 
 </head>
 <body>
     <section id="hero">
-        <h1>Aamna Shahab</h1>
-        <h2>Creative Developer & Tester</h2>
+        <h1 id="name">Aamna Shahab</h1>
+        <h2 id="profession">Creative Developer & Tester</h2>
         <p>Email: <a href="mailto:aamna.ger@gmail.com">aamna.ger@gmail.com</a></p>
     </section>
     <div class="bubble" id="projects">Projects</div>
