--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <header class="w3-container w3-center" style="padding:128px 16px" id="home">
     <h1 class="w3-jumbo"><b>Aamna Shahab</b></h1>
     <p>Creative Developer & Tester</p>
-    <img src="your-image.jpg" class="w3-image w3-round" style="display:block;width:60%;margin:auto;">
+    <img src="images/profile-pic.jpg" class="w3-image w3-round" style="display:block;width:60%;margin:auto;">
     <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
       <i class="fa fa-download"></i> Download Resume
     </button>
