--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <!-- Sidebar with image -->
 <nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:40%">
+<img src="your-image.jpg" class="w3-image w3-round" style="display:block;width:60%;margin:auto;">
   <div class="bgimg"></div>
 </nav>
 
@@ -42,7 +43,6 @@
   <header class="w3-container w3-center" style="padding:128px 16px" id="home">
     <h1 class="w3-jumbo"><b>Aamna Shahab</b></h1>
     <p>Creative Developer & Tester</p>
-    <img src="images/profile-pic.jpg" class="w3-image w3-round" style="display:block;width:60%;margin:auto;">
     <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
       <i class="fa fa-download"></i> Download Resume
     </button>
