--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <!-- Sidebar with image -->
 <nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:40%">
-<img src="your-image.jpg" class="w3-image w3-round" style="display:block;width:60%;margin:auto;">
+<img src="images/profile-pic.jpg" class="w3-image w3-round" style="display:block;width:60%;margin:auto;">
   <div class="bgimg"></div>
 </nav>
 
