--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
 <body>
 
 <!-- Sidebar with image -->
-<nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:40%">
-<img src="images/profile-pic.jpg" class="w3-image w3-round" style="display:block;width:60%;margin:auto;">
-  <div class="bgimg"></div>
-</nav>
+<nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:40%; background-image: url('images/profile-pic.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+    <div class="bgimg"></div>
+  </nav>
 
 <!-- Hidden Sidebar (reveals when clicked on menu icon)-->
 <nav class="w3-sidebar w3-black w3-animate-right w3-xxlarge" style="display:none;padding-top:150px;right:0;z-index:2" id="mySidebar">
