--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
     <!-- Grid for projects -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="/path/to/your/project1.jpg" style="width:100%">
-        <img src="/path/to/your/project2.jpg" style="width:100%">
+        <img src="images/project-amyely.png" style="width:100%">
+        <img src="images/project-alexandross.png" style="width:100%">
       </div>
       <div class="w3-half">
-        <img src="/path/to/your/project3.jpg" style="width:100%">
-        <img src="/path/to/your/project4.jpg" style="width:100%">
+        <img src="images/project-uchobali.png" style="width:100%">
+        <img src="images/project-weathercheck.png" style="width:100%">
       </div>
     </div>
   </div>
