--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- Grid for projects -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="images/project-amyely.png" style="width:100%">
+        <img src="images/project-amyely.svg" style="width:100%">
         <img src="images/project-alexandross.png" style="width:100%">
       </div>
       <div class="w3-half">
