Fixed footer socials

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
 </head>
 
 <body>
@@ -118,9 +119,6 @@
   <div class="w3-padding-32 w3-content w3-text-grey" id="contact" style="margin-bottom:64px">
     <h2>Contact Me</h2>
     <hr class="w3-opacity">
-    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Saarbrücken, Germany</p>
-    <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"></i> Email: <a href="mailto:aamna.ger@gmail.com">aamna.ger@gmail.com</a></p>
-
     <form action="/action_page.php" target="_blank">
       <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="Name"></p>
       <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Email" required name="Email"></p>
@@ -136,13 +134,11 @@
 
   <!-- Footer -->
   <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin:-24px">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-    <p>Made with ❤️ by Aamna Shahab</p>
+    <a href="https://www.github.com/iamaamna12" target="_blank"><i class="fa-brands fa-github w3-hover-opacity"></i></a>
+    <a href="https://www.instagram.com/aamna.dev" target="_blank"><i class="fa-brands fa-instagram w3-hover-opacity"></i></a> 
+    <a href="https://www.x.com/livmedafacologn"><i class="fa-brands fa-x-twitter w3-hover-opacity"></i></a>
+    <a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin w3-hover-opacity"></i></a>
+    <p id="copyright">Made with ❤️ by Aamna Shahab</p>
 
 </footer>
 
