--- a/index.html
+++ b/index.html
@@ -43,9 +43,6 @@
   <header class="w3-container w3-center" style="padding:245px 16px" id="home">
     <h1 class="w3-jumbo"><b>Aamna Shahab</b></h1>
     <p>Creative Developer & Tester</p>
-    <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
-      <i class="fa fa-download"></i> Download Resume
-    </button>
   </header>
 
   <!-- Portfolio Section -->
@@ -104,40 +101,28 @@
       </div>
     </div>
 
-    <button class="w3-button w3-light-grey w3-padding-large w3-section">
-      <i class="fa fa-download"></i> Download Resume
-    </button>
-
     <!-- Testimonials Section -->
-    <h3 class="w3-padding-24">My Reputation</h3>
-    <img src="/w3images/avatar_smoke.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
-    <p><span class="w3-large w3-text-black w3-margin-right">Chandler Bing.</span> Web Designer.</p>
-    <p>Aamna Shahab is just awesome. I am so happy to have met her!</p><br>
+    <h3 class="w3-padding-24">What some of my clients have to say..</h3>
+  <div>
+    <blockquote>
+      <p><i class="fa-solid fa-quote-left"></i> I had the pleasure of working with Aamna on two major projects: <a href="https://www.uchobali.com" target="_blank" style="color: rgb(66, 149, 208);">Uchobali.com</a> my e-commerce store and <a href="https://www.alexandrossbnb.com" target="_blank" style="color: rgb(66, 149, 208);">Alexandrossbnb.com</a>. Aamna was incredibly efficient in syncing all of our bookings across the platforms like expedia, booking, airbnb, website and resolving some of the most challenging technical issues we faced. Her attention to detail, quick problem-solving, and dedication to ensuring everything ran smoothly made a huge difference. Thanks to her work, our systems are more streamlined, and we can focus on growing our business with peace of mind. <i class="fa-solid fa-quote-right"></i></p>
+      <cite>Satisfied Client, Mexico</cite>
+    </blockquote>
+
+    <blockquote>
+      <p><i class="fa-solid fa-quote-left"></i>Working with Aamna was a game-changer for our business. She built our translation agency website, <a href="https://www.rtllanguagesolutions.com" target="_blank"  style="color: rgb(66, 149, 208);">rtllanguagesolutions.com</a> from the ground up. Aamna's expertise in web development, attention to detail, and seamless integration of all our services helped us streamline our processes. The website now not only represents our services in a professional and user-friendly way but has also significantly improved our client engagement. Her dedication, efficiency, and technical skills have been invaluable to us.<i class="fa-solid fa-quote-right"></i></p>
+      <cite>Satisfied Client, New Delhi</cite>
+    </blockquote>
   </div>
 
-  <!-- Contact Section -->
-  <div class="w3-padding-32 w3-content w3-text-grey" id="contact" style="margin-bottom:64px">
-    <h2>Contact Me</h2>
-    <hr class="w3-opacity">
-    <form action="/action_page.php" target="_blank">
-      <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="Name"></p>
-      <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Email" required name="Email"></p>
-      <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Subject" required name="Subject"></p>
-      <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Message" required name="Message"></p>
-      <p>
-        <button class="w3-button w3-light-grey w3-padding-large" type="submit">
-          <i class="fa fa-paper-plane"></i> SEND MESSAGE
-        </button>
-      </p>
-    </form>
-  </div>  
 
   <!-- Footer -->
   <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin:-24px">
     <a href="https://www.github.com/iamaamna12" target="_blank"><i class="fa-brands fa-github w3-hover-opacity"></i></a>
     <a href="https://www.instagram.com/aamna.dev" target="_blank"><i class="fa-brands fa-instagram w3-hover-opacity"></i></a> 
-    <a href="https://www.x.com/livmedafacologn"><i class="fa-brands fa-x-twitter w3-hover-opacity"></i></a>
-    <a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin w3-hover-opacity"></i></a>
+    <a href="https://www.x.com/livmedafacologn" target="_blank"><i class="fa-brands fa-x-twitter w3-hover-opacity"></i></a>
+    <a href="https://www.linkedin.com" target="_blank"><i class="fa-brands fa-linkedin w3-hover-opacity"></i></a>
+    <a href="mailto:aamna.ger@gmail.com"><i class="fa-solid fa-envelope"></i></a>
     <p id="copyright">Made with ❤️ by Aamna Shahab</p>
 
 </footer>
