--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script> <!--GSAP Animations-->
+    
 
 </head>
 
@@ -59,6 +61,7 @@
       <div class="w3-half">
         <img src="images/project-uchobali.png" style="width:100%">
         <img src="images/project-weathercheck.png" style="width:100%">
+        <img src="images/todolist-project.png" style="width: 100%;">
       </div>
     </div>
   </div>
@@ -103,21 +106,32 @@
 
     <!-- Testimonials Section -->
     <h3 class="w3-padding-24">What some of my clients have to say..</h3>
-  <div>
+  <div class="testimonial-carousel">
+
+    <div class="testimonial-card">
     <blockquote>
       <p><i class="fa-solid fa-quote-left"></i> I had the pleasure of working with Aamna on two major projects: <a href="https://www.uchobali.com" target="_blank" style="color: rgb(66, 149, 208);">Uchobali.com</a> my e-commerce store and <a href="https://www.alexandrossbnb.com" target="_blank" style="color: rgb(66, 149, 208);">Alexandrossbnb.com</a>. Aamna was incredibly efficient in syncing all of our bookings across the platforms like expedia, booking, airbnb, website and resolving some of the most challenging technical issues we faced. Her attention to detail, quick problem-solving, and dedication to ensuring everything ran smoothly made a huge difference. Thanks to her work, our systems are more streamlined, and we can focus on growing our business with peace of mind. <i class="fa-solid fa-quote-right"></i></p>
       <cite>Satisfied Client, Mexico</cite>
     </blockquote>
-
+    </div>
+    <div class="testimonial-card">
     <blockquote>
       <p><i class="fa-solid fa-quote-left"></i>Working with Aamna was a game-changer for our business. She built our translation agency website, <a href="https://www.rtllanguagesolutions.com" target="_blank"  style="color: rgb(66, 149, 208);">rtllanguagesolutions.com</a> from the ground up. Aamna's expertise in web development, attention to detail, and seamless integration of all our services helped us streamline our processes. The website now not only represents our services in a professional and user-friendly way but has also significantly improved our client engagement. Her dedication, efficiency, and technical skills have been invaluable to us.<i class="fa-solid fa-quote-right"></i></p>
-      <cite>Satisfied Client, New Delhi</cite>
+      <cite>Satisfied Client, India</cite>
     </blockquote>
+    </div>
+      <!-- Navigation Arrows -->
+    <div class="carousel-nav">
+     <button class="prev" onclick="moveTestimonial(-1)">&#10094;</button>
+     <button class="next" onclick="moveTestimonial(1)">&#10095;</button>
+    </div>
+
   </div>
+  
 
 
   <!-- Footer -->
-  <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin:-24px">
+  <footer class=" w3-center w3-opacity w3-xlarge" style="margin-top: 50px; padding: 10px;">
     <a href="https://www.github.com/iamaamna12" target="_blank"><i class="fa-brands fa-github w3-hover-opacity"></i></a>
     <a href="https://www.instagram.com/aamna.dev" target="_blank"><i class="fa-brands fa-instagram w3-hover-opacity"></i></a> 
     <a href="https://www.x.com/livmedafacologn" target="_blank"><i class="fa-brands fa-x-twitter w3-hover-opacity"></i></a>
@@ -127,6 +141,7 @@
 
 </footer>
 
+<script src="nav.js"></script>
 <script>
 // Open and close sidebar
 function openNav() {
@@ -141,3 +156,4 @@ function closeNav() {
 
 </body>
 </html>
+
