--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <a href="javascript:void(0)" onclick="closeNav()" class="w3-button w3-black w3-xxxlarge w3-display-topright" style="padding:0 12px;">
     <i class="fa fa-remove"></i>
   </a>
-  <div class="w3-bar-block w3-center">
+  <div class="w3-bar-block w3-center" style="font-size: large;">
     <a href="#home" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Home</a>
     <a href="#portfolio" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Portfolio</a>
     <a href="#about" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">About</a>
@@ -70,7 +70,26 @@
   <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
     <h2>About</h2>
     <hr class="w3-opacity">
-    <p>I am a results-driven software engineer with expertise in ReactJS, C++, and testing tools like WebDriverIO. I am passionate about creating dynamic web applications, and I enjoy collaborating with teams to solve complex problems and deliver high-quality software solutions.</p>
+    <p>I am a Creative Developer and Tester with a 
+      passion for creating innovative and user-friendly web applications. 
+      Currently based in Saarbrücken, Germany, I hold a Master's in Computer Science and have gained 
+      significant professional experience, particularly in Web Development and Automation Testing.<br><br>
+
+      I specialize in building responsive websites, optimizing user interfaces, and implementing solutions 
+      that enhance user experience. With expertise in a wide range of tools and programming 
+      languages, including <b>HTML5, CSS3, JavaScript, TypeScript, MySQL, and AWS,</b> 
+      I am dedicated to staying ahead of the curve in this ever-evolving tech landscape.<br><br>
+
+      In addition to my technical skills, I am proficient in design tools like <b>Figma, Canva and Photoshop, </b>
+      which allow me to create both functional and visually appealing websites. As a photography enthusiast, 
+      I enjoy capturing moments through my lens, which further enhances my creative approach. You can explore 
+      my photography on Instagram at <a href="https://www.instagram.com/shutterbug_aamna" target="_blank" style="color: rgb(227, 92, 39);">@shutterbug_aamna</a>
+      
+      Over the years, I’ve contributed to various projects, including e-commerce websites, 
+      translations services website, food delivery Android applications and automation testing frameworks. My goal is to combine technical 
+      expertise with creative solutions to deliver high-quality, scalable, and efficient web applications that meet user needs.<br><br>
+      
+      I am always looking for opportunities to collaborate with innovative teams and work on projects that challenge me to grow and refine my skills.</p>
     <h3 class="w3-padding-16">My Skills</h3>
     <p class="w3-wide">Programming</p>
     <div class="w3-light-grey">
